--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -238,6 +238,7 @@
     "your-snapshots": "Dina avbildningar",
     "proxies-subheader-2": "Det gör så du kommer åt den med en snygg länk istället för en slumpmässig port.",
     "choose-zone": "Välj zon",
+    "zone": "Zon",
     "overview": "Överblick",
     "proxies-subheader-1": "Driftssätt en proxy till en exponerad port på din virtuella maskin.",
     "your-snapshot-will-be-created-as": "Din avbildning skapas som",
