--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -420,7 +420,7 @@
         "from-team": "from team",
         "resource-not-found": "Resource not found",
         "shared": "Shared",
-        "shared-in-group": "Resource is available through a group you are a member of",
+        "shared-in-group": "Resource is available through a team you are a member of",
         "auto-scroll": "Auto scroll",
         "logs-truncated": "Over 1000 logs: Logs truncated. Please download the full log file to view earlier logs.",
         "no-teams": "No teams found, create one or join a friend's team!",
