Fix port forward domain and proxy domain for kista zone, closes #142

--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -87,7 +87,7 @@
         "deploy-with-github-actions-subheader": "Lägg till GitHub Actions-filen i ditt projekt för att publicera din app automatiskt.",
         "no-deployments-found": "Inga resurser hittades",
         "admin-loaded-gpus": "hämtade GPUer",
-        "menu-dashboard": "Start",
+        "menu-dashboard": "Översikt",
         "gravatar": "Vi använder Gravatar för profilbilder. Byt på ",
         "admin-visibility": "Synlighet",
         "create-vm-max-disk-size": "Max tillgänglig diskutrymme",
