--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -428,6 +428,21 @@
         "light-mode": "Ljust läge",
         "theme": "Tema",
         "report-a-bug": "Rapportera ett fel",
-        "follow-kthcloud": "Följ kthcloud"
+        "follow-kthcloud": "Följ kthcloud",
+        "setup-custom-domain": "Konfigurera egen domän",
+        "setup-custom-domain-subheader": "Ange en domän för din app.",
+        "setup-custom-domain-steps": "Peka CNAME|Verifiera ägarskap|Klart",
+        "no-custom-domain": "Ingen egen domän hittades",
+        "setup-domain": "Konfigurera domän",
+        "edit-domain": "Redigera domän",
+        "clear-domain": "Ta bort domän",
+        "setup-custom-domain-0": "Peka din domän med en CNAME-record till app.cloud.cbh.kth.se och ange din domän nedan.",
+        "setup-custom-domain-0-warning": "OBS! Om du använder en proxytjänst som Cloudflare, inaktivera proxyn så att vår DNS-sökning löser sig korrekt. Du kan återaktivera proxyn efter att domänen verifierats.",
+        "setup-custom-domain-1": "Verifiera ägarskap av din domän genom en TXT-record med följande värde.",
+        "setup-custom-domain-1-table": "Dina DNS-inställningar bör se ut så här",
+        "setup-custom-domain-2": "Klart! Om en stund ska din app vara tillgänglig på din domän. Du ser statusen under Domän.",
+        "setup-custom-domain-2-warning": "Det kan ta upp till 24 timmar innan ändringarna verkställts.",
+        "type": "Typ",
+        "content": "Innehåll"
     }
 }
