--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -126,7 +126,8 @@
         "create-deployment-github-repo": "Repository",
         "login-with-github": "Login with GitHub",
         "error-getting-repos": "Error getting repositories",
-        "example-use-cases": "See example use cases",
+        "see-example-use-cases": "See example use cases",
+        "example-use-cases": "Example use cases",
         "use-case": "Use case",
         "resouce-comparison-stateless-frontend": "Stateless frontend service: eg. React, AngularJS",
         "resouce-comparison-stateless-backend": "Stateless backend service: eg. Express.js, Flask",
@@ -145,7 +146,7 @@
         "resouce-comparison-batch-jobs": "Batch jobs for data transformation: eg. Talend, Informatica PowerCenter",
         "resouce-comparison-web-scraping-services": "Web scraping services: eg. Scrapy, Beautiful Soup",
         "resouce-comparison-logging-services": "Logging services: eg. Logstash, Sentry",
-        "llama-label": "What do you want to make? Ask Llama 2:",
+        "llama-label": "Ask Llama 2",
         "llama-mysql": "mysql database",
         "llama-machine-learning": "machine learning",
         "llama-react-frontend": "react frontend",
