--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -49,7 +49,7 @@
         "gpu-capacity": "GPU-kapacitet",
         "admin-usage": "Användning",
         "button-logout": "Logga ut",
-        "llama-label": "Vad vill du göra? Fråga Llama 2:",
+        "llama-label": "Fråga Llama 2",
         "successfully-updated": "Uppdateringen lyckades",
         "error-fetching-snapshot": "Kunde inte hämta avbildningar: ",
         "storage-manager": "Hantera lagring",
@@ -63,7 +63,8 @@
         "create-deployment-storage-path": "Filösökväg",
         "admin-visibility-public": "Publik",
         "create-deployment-name-warning": "Din deployment kommer skapas med namnet",
-        "example-use-cases": "Se exempel",
+        "see-example-use-cases": "Se exempel",
+        "example-use-cases": "Exempel",
         "create-and-go": "Skapa",
         "time-seconds-ago": "sekunder sedan",
         "getting-started": "Kom igång",
