Fix weird bug with blinking website when clicking on "Deployment" or "VM" in the Create form, closes #160

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -447,6 +447,7 @@
         "content": "Content",
         "port": "Port",
         "domain-missing": "Domain required",
-        "edit-your-proxy-after-creation-for-custom-domain": "Edit your proxy after creation to setup a custom domain"
+        "edit-your-proxy-after-creation-for-custom-domain": "Edit your proxy after creation to setup a custom domain",
+        "choose-type": "Choose type"
     }
 }
