--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -454,6 +454,7 @@
         "domain-missing": "Domän saknas",
         "choose-type": "Välj resurstyp",
         "joinedAt": "Gick med",
-        "addedAt": "Lades till"
+        "addedAt": "Lades till",
+        "jobRestarted": "Jobb startat om"
     }
 }
