Include the support from Digitalisation Platform on the main login page, closes #187

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -456,6 +456,14 @@
         "choose-type": "Choose type",
         "joinedAt": "Joined at",
         "addedAt": "Added at",
-        "jobRestarted": "Job restarted"
+        "jobRestarted": "Job restarted",
+        "funding-provided-by": "kthcloud is proudly supported by a diverse group of partners. Financial backing is provided by ",
+        "the": " the ",
+        "program-and-the": "program and the ",
+        "kth-digitalization-platform": "KTH Digitalisation Platform",
+        "computational-support": "We receive invaluable computational support from ",
+        "funding": "Funding",
+        "disclaimer": "Disclaimer",
+        "genai-long": "AI generated content may be inaccurate or misleading, always verify the information. All AI generated content on this page is marked with the following symbol"
     }
 }
