--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -455,6 +455,14 @@
         "choose-type": "Välj resurstyp",
         "joinedAt": "Gick med",
         "addedAt": "Lades till",
-        "jobRestarted": "Jobb startat om"
+        "jobRestarted": "Jobb startat om",
+        "funding-provided-by": "kthcloud samarbetar med och stöttas av många organisationer. Finansiellt stöd har vi fått från ",
+        "the": " ",
+        "program-and-the": "programmet och ",
+        "kth-digitalization-platform": "KTH Digitaliseringsplattformen",
+        "computational-support": "Vi får även stöd i form av hårdvara från ",
+        "funding": "Finansiellt stöd",
+        "disclaimer": "Ansvarsfriskrivning",
+        "genai-long": "Innehåll genererat av AI kan vara felaktigt eller missvisande, verifiera alltid informationen. Allt innehåll genererat av AI på denna sida är märkt med följande symbol"
     }
 }
