Add "permanent lease" for GPU on admin page, closes #178

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -207,6 +207,7 @@
         "could-not-save-visibility": "Could not save visibility: ",
         "visibility-subheader": "Choose whether to make this deployment hidden from the internet",
         "lease-gpu": "Lease GPU",
+        "lease-gpu-forever": "Lease GPU forever",
         "renew-gpu-lease": "Renew GPU lease",
         "gpu-lease": "GPU Lease",
         "gpu-lease-subheader": "Leasing a GPU allows you to use it for a limited time.",
