Update some locale string

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,7 +37,7 @@
         "menu-dashboard": "Dashboard",
         "menu-create-new": "Create new",
         "menu-profile": "Profile",
-        "menu-cbhcloud": "cbhcloud",
+        "menu-kthcloud": "kthcloud",
         "menu-status": "Server status",
         "menu-docs": "Docs",
         "menu-support": "Discord",
@@ -103,7 +103,7 @@
         "create-deployment-app-path": "App path",
         "create-deployment-app-path-label": "Path in your app",
         "create-deployment-storage-path": "Storage path",
-        "create-deployment-storage-path-label": "Path in your cbhcloud storage",
+        "create-deployment-storage-path-label": "Path in your kthcloud storage",
         "create-and-stay": "Create and stay",
         "create-and-go": "Create",
         "create-vm": "Create VM",
@@ -279,30 +279,30 @@
         "reboot": "Reboot",
         "getting-started": "Getting started",
         "skip": "Skip",
-        "onboarding-welcome": "Welcome to cbhcloud!",
+        "onboarding-welcome": "Welcome to kthcloud!",
         "onboarding-profile": "Your profile",
-        "onboarding-resources": "Resources on cbhcloud",
+        "onboarding-resources": "Resources on kthcloud",
         "onboarding-deployments": "Resource type: Deployments",
         "onboarding-vms": "Resource type: Virtual Machines",
         "onboarding-gpu": "GPU",
         "onboarding-finish": "Let's go!",
-        "onboarding-welcome-1": "We're thrilled you want to try out cbhcloud! This is a quick guide to get you started.",
+        "onboarding-welcome-1": "We're thrilled you want to try out kthcloud! This is a quick guide to get you started.",
         "onboarding-welcome-2": "We offer a cutting-edge private cloud infrastructure tailored to meet the unique needs of KTH's bright minds. Seamlessly run experiments, collaborate on groundbreaking research, and harness the power of cloud technology to drive innovation.",
         "onboarding-profile-1": "Your profile is where you can find your personal information and view your quotas.",
         "onboarding-profile-2": "You can also find your SSH keys here. These keys enable you to connect to your virtual machines.",
-        "onboarding-resources-1": "cbhcloud resources are graciously provided by researchers, the KTH IT department, KTH PDC and new hardware is funded through the European Union's Erasmus project.",
-        "onboarding-resources-2": "Keep in mind that cbhcloud is a shared resource. Please be considerate of your fellow students and researchers and only use what you need.",
+        "onboarding-resources-1": "kthcloud resources are graciously provided by researchers, the KTH IT department, KTH PDC and new hardware is funded through the European Union's Erasmus project.",
+        "onboarding-resources-2": "Keep in mind that kthcloud is a shared resource. Please be considerate of your fellow students and researchers and only use what you need.",
         "onboarding-resources-3": "If you need more resources, please contact us on Discord!",
-        "onboarding-deployments-1": "Deployments are the most common resource type on cbhcloud. They are perfect for running experiments, or hosting websites.",
-        "onboarding-deployments-2": "All you need is a Docker image or a repo with a Dockerfile, and a little bit of configuration. cbhcloud will take care of the rest.",
-        "onboarding-vms-1": "Virtual machines are the most flexible resource type on cbhcloud. You can install any programs you want and have full control over the machine.",
+        "onboarding-deployments-1": "Deployments are the most common resource type on kthcloud. They are perfect for running experiments, or hosting websites.",
+        "onboarding-deployments-2": "All you need is a Docker image or a repo with a Dockerfile, and a little bit of configuration. kthcloud will take care of the rest.",
+        "onboarding-vms-1": "Virtual machines are the most flexible resource type on kthcloud. You can install any programs you want and have full control over the machine.",
         "onboarding-vms-2": "Virtual machines are perfect for running machine learning models, databases and other more complex applications.",
         "onboarding-vms-3": "You can also request a GPU for your virtual machine. Please note that GPU resources are limited, for extended use you may want to provide your own GPU.",
-        "onboarding-gpu-1": "cbhcloud provides access to top of the line GPUs from NVIDIA. These GPUs are perfect for training machine learning models.",
+        "onboarding-gpu-1": "kthcloud provides access to top of the line GPUs from NVIDIA. These GPUs are perfect for training machine learning models.",
         "onboarding-gpu-2": "GPU resources are limited, for extended use you may want to provide your own GPU.",
-        "onboarding-finish-1": "That's it! You're ready to start using cbhcloud.",
+        "onboarding-finish-1": "That's it! You're ready to start using kthcloud.",
         "onboarding-finish-2": "If you have any questions, please contact us on Discord.",
-        "onboarding-finish-3": "Happy hacking! - cbhcloud team",
+        "onboarding-finish-3": "Happy hacking! - kthcloud team",
         "onboarding-wait-1": "Please wait as we finish setting up your account.",
         "onboarding-wait-2": "Hmm, it seems this is taking a while. Try refreshing the page or contact us on Discord.",
         "profile": "Profile",
