--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -56,8 +56,8 @@
         "create-deployment-github-subheader": "Koppla ditt projekt på GitHub för automatisk driftsättning av din kod. Om du inte kopplar ett projekt får du instruktioner i nästa steg för att lägga upp din kod på andra sätt.",
         "button-filter": "Filtrera",
         "copy": "Kopiera",
-        "onboarding-resources-2": "Tänk på att cbhclouds resurser delas med andra forskare och studentet. Ta hänsyn till dina medmänniskor och använd bara det du behöver.",
-        "onboarding-resources-1": "Resurser på cbhcloud är donerade av forskare, KTH:s IT-avdelning, KTH PDC och ny hårdvara finansieras genom KTH och EU.",
+        "onboarding-resources-2": "Tänk på att kthclouds resurser delas med andra forskare och studentet. Ta hänsyn till dina medmänniskor och använd bara det du behöver.",
+        "onboarding-resources-1": "Resurser på kthcloud är donerade av forskare, KTH:s IT-avdelning, KTH PDC och ny hårdvara finansieras genom KTH och EU.",
         "could-not-execute-command": "Kunde inte genomföra kommando: ",
         "onboarding-resources-3": "Om du behöver mer resurser, tveka inte att höra av dig på Discord!",
         "create-deployment-storage-path": "Filösökväg",
@@ -111,7 +111,7 @@
         "view-onboarding": "Se genomgång",
         "button-save": "Spara",
         "no-logs-found": "Inga händelser hittades. Kom tillbaka senare",
-        "onboarding-vms-1": "Virtuella maskiner är den mest flexibla resursen på cbhcloud. Du kan installera vilka program du vill och har full kontroll över maskinen.",
+        "onboarding-vms-1": "Virtuella maskiner är den mest flexibla resursen på kthcloud. Du kan installera vilka program du vill och har full kontroll över maskinen.",
         "create-vm-ssh-key-subheader": "Har du ingen nyckel än? Ladda upp en på din ",
         "onboarding-vms-3": "Du kan också installera ett grafikkort till din virtuella maskin. Observera att resurserna är begränsade och därmed får du bara låna den en stund.",
         "create-deployment-image-subheader": "Om du vill använda en förbyggd container anger du dess namn nedan. Till exempel mongo, mongo:4.4 eller quay.io/keycloak/keycloak",
@@ -153,7 +153,7 @@
         "could-not-fetch-profile": "Profilen kunde inte hämtas: ",
         "visibility-subheader": "Välj om din app ska synas på webben",
         "secrets": "hemligheter",
-        "onboarding-resources": "Resurser på cbhcloud",
+        "onboarding-resources": "Resurser på kthcloud",
         "deleting": "Raderar...",
         "loading": "Hämtar...",
         "could-not-save-visibility": "Kunde inte spara synlighet: ",
@@ -170,9 +170,9 @@
         "you-are-impersonating-user": "Du är inloggad som ",
         "leased-until": "Lånat till ",
         "show": "Visa",
-        "onboarding-finish-1": "Det är allt! Du är redo att börja använda cbhcloud.",
+        "onboarding-finish-1": "Det är allt! Du är redo att börja använda kthcloud.",
         "onboarding-finish-2": "Om du har några frågor, tveka inte att kontakta oss på Discord.",
-        "onboarding-finish-3": "Happy hacking! - cbhcloud",
+        "onboarding-finish-3": "Happy hacking! - kthcloud",
         "resouce-comparison-media-streaming-services": "Streamingtjänster för media: t.ex. Plex, Emby",
         "landing-intro-header": "Välkommen till",
         "ssh-public-keys": "SSH-nycklar",
@@ -208,7 +208,7 @@
         "create-already-taken": "redan taget",
         "admin-loaded-deployments": "hämtade deployments",
         "create-vm-max-cpu": "Max antal CPU-kärnor",
-        "onboarding-welcome": "Välkommen till cbhcloud!",
+        "onboarding-welcome": "Välkommen till kthcloud!",
         "external": "Extern",
         "copy-key": "Kopiera nyckel",
         "quotas-subheader": "Använd resurserna hur du vill, så länge summan är mindre än gränsen",
@@ -221,7 +221,7 @@
         "snapshots-subheader": "Med avbildningar kan du spara maskinens tillstånd vid en viss tidpunkt. Du kan återgå till det tillståndet när som helst",
         "latest-posts-on-mastodon": "Senaste inlägg på Mastodon",
         "create-deployment-env-value": "Värde",
-        "onboarding-welcome-1": "Vad kul att du vill prova cbhcloud! Här är en snabb genomgång för att komma igång.",
+        "onboarding-welcome-1": "Vad kul att du vill prova kthcloud! Här är en snabb genomgång för att komma igång.",
         "resouce-comparison-data-processing-pipelines": "Databehandlingspipelines: t.ex. Apache Hadoop, Spark",
         "onboarding-welcome-2": "Vi erbjuder en toppmodern privat molninfrastruktur skräddarsydd för att möta de unika behoven hos KTH:s forskare och studenter. Kör experiment smidigt, samarbeta på banbrytande forskning och utnyttja kraften i molnet för att driva innovation.",
         "admin-edit-permissions-in": "Redigera användares roller och behörigheter på",
@@ -251,12 +251,12 @@
         "resouce-comparison-ci-cd-pipelines": "Kontinuerlig integration och pipelines: t.ex. Jenkins, GitLab Runner",
         "url": "Länk",
         "create-vm-amount-of-ram": "Minne i GB",
-        "onboarding-deployments-1": "Deployment är den vanligaste resurstypen på cbhcloud. De är perfekta för allt från snabba prototyper till webbplatser.",
+        "onboarding-deployments-1": "Deployment är den vanligaste resurstypen på kthcloud. De är perfekta för allt från snabba prototyper till webbplatser.",
         "error-creating-snapshot": "Kunde inte skapa avbildning: ",
         "visibility-saving": "Sparar synlighet...",
         "admin-loaded-users": "hämtade användare",
         "creating-proxy": "Skapar proxy ",
-        "onboarding-deployments-2": "Allt du behöver är en Docker container eller ett projekt med en Dockerfile, och lite konfiguration. cbhcloud tar hand om resten.",
+        "onboarding-deployments-2": "Allt du behöver är en Docker container eller ett projekt med en Dockerfile, och lite konfiguration. kthcloud tar hand om resten.",
         "copy-to-clipboard": "Kopiera",
         "select-port": "Välj port för proxy till",
         "admin-leased-until": "Lånat till",
@@ -270,7 +270,7 @@
         "error-could-not-fetch-users": "Kunde inte hämta användare",
         "error-could-not-fetch-jobs": "Kunde inte hämta jobb",
         "error-could-not-fetch-teams": "Kunde inte hämta grupper",
-        "menu-cbhcloud": "cbhcloud",
+        "menu-kthcloud": "kthcloud",
         "snapshots": "Avbildningar",
         "select-key-file": "Ladda upp fil",
         "lease-expired-header": "Ditt lån av grafikkort har gått ut.",
@@ -279,7 +279,7 @@
         "create-vm-number-of-cpu-cores": "Antal CPU-kärnor",
         "menu-dns": "DNS",
         "onboarding-gpu-2": "GPU-resurserna är begränsade, för längre användning kan du köpa ett eget grafikkort och få det installerat i molnet.",
-        "onboarding-gpu-1": "cbhcloud ger tillgång till senaste grafikkorten från NVIDIA. De är perfekta för att träna maskininlärningsmodeller.",
+        "onboarding-gpu-1": "kthcloud ger tillgång till senaste grafikkorten från NVIDIA. De är perfekta för att träna maskininlärningsmodeller.",
         "ssh-string-subheader": "Kör det här i din terminal för att komma åt din maskin",
         "e-g": "till exempel",
         "revert-to-this-snapshot": "Återgå till denna avbildning",
