--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -527,6 +527,8 @@
         "error-copying-user-id": "Kunde inte kopiera användar ID",
         "copied-user-id": "Kopierade användar ID",
         "error-copying-user-id-user-is-null": "Kunde inte kopiera användar ID eftersom användaren är null",
-        "not-permitted-to-gpu-page": "Kan inte komma åt GPU sidan: Inte tillåten att använda GPUer"
+        "not-permitted-to-gpu-page": "Kan inte komma åt GPU sidan: Inte tillåten att använda GPUer",
+        "run-args": "Argument till körning",
+        "nothing-to-do": "Inget att göra"
     }
 }
